# alethic-ism-core

./: .gitignore  BUILD.md  Dockerfile  Dockerfile.old  README.md  README.txt  VERSION  VERSION.txt  anthropic_test.py  build-docker-image.sh  build.sh  cbuild.sh  code_not_used.py  command-examples.txt  conda_build.sh  docker_build.sh  docker_build_conda_package.sh  docker_deploy.sh  docker_extract_conda_package.sh  embedding.py  entrypoint-package-channel.sh  environment-prod.yaml  environment.yaml  environment.yml  increment_build_no.py  map_flattener.py  openai_test.py  output.txt  package-conda-channel.sh  package.json  packages  procli.py  pyproject.toml  requirements.txt  setup.py  setuptools.py  state-config-test.yaml  test-database-config-import.json  testme.pickle  utils.py
alethic_ism_core/: __init__.py
buildpack/: buildpack.toml
conda-recipe/: backup.yaml  meta.yaml  meta.yaml-E  meta_backup.yaml
consumer/: question_answer_consumer.py
docs/: conda-bootstrap.sh
evaluation/: semantic_distance.py  syntactic_accuracy.py  test_sentence_reference.py
generators/: openai_philosopher_qa_capture.py  philosophers.json  philosophical_questions.csv  philosophical_questions2.json  philosophical_questions_backup.json  philosophical_questions_backup_20231028.json
infra/: bootstrap-appsmith-dev.sh  bootstrap-superset-helm.sh  bootstrap-superset.sh  superset-basic-auth  superset-basic-auth.sh  superset-lb.yaml
ism/: __init__.py
processor/: anima_llm_fix.py  animallm_processors.py  base_processor.py  base_question_answer_processor.py  full_join_processor.py  general_utils.py  map_flattener.py  processor_animallm.py  processor_chain.py  processor_cli.py  processor_database.py  processor_excel.py  processor_full_join.py  processor_question_answer.py  processor_simulator.py  processor_state.py  processor_state_db.py  processor_tests.py  processors.py  question_answer.py  question_answer.py.deprecated  question_answer_v2.py  simple_module_test.py  state_cli.py  state_database_processor.py  state_utils.py
recipe/: meta.yaml
roundtable_test/: ConversationalRetrievalChainCustom.py  Persona.py  callback.py  conversation_dialog.json  dialog_test.py  questions.py  questions.txt
src/: __init__.py
tests/: demo.py  (+26 more)
(+352 files in other folders)
