[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

#[project]
#name = "alethic-ism-core"
#dynamic = ["version"]
#description = "Alethic - Instruction-Based State Machine (Python Core SDK)"

[tool.setuptools_scm]
version_file = "_version.py"
local_scheme = "no-local-version"

#[build-system]
#requires = ["setuptools", "wheel"]
#build-backend = "setuptools.build_meta"

#[build-system]
#requires = ["setuptools"]
#build-backend = "setuptools.build_meta"
#
#[tool.setuptools.packages.find]
#where = ["./alethic_ism_core"]  # list of folders that contain the packages (["."] by default)
##include = ["<package name>"]  # package names should match these glob patterns (["*"] by default)
##exclude = []  # exclude packages matching these glob patterns (empty by default)
##namespaces = false  # to disable scanning PEP 420 namespaces (true by default)
#
#[project]
#name = "alethic-ism-core"
#version = "0.3.0"
#description = "Alethic - Instruction-Based State Machine (Core)"
#dependencies = [
#    "python-dotenv",
#    "pyyaml",
#    "pydantic"
#]
